--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 header{
     width: 100%;
     height: 500px;
-    background: url(../peage/空0001.jpg);
+    background: url(../空0001.jpg);
     background-size: cover;
     background-position: center;
 }
